--- a/config/database.yml
+++ b/config/database.yml
@@ -31,7 +31,11 @@ postgres: &default
 
 development:
   <<: *default
-  database: vitaminlab-spree_development
+  database: vitaminlab_spree_development
+  adapter: postgresql
+  encoding: unicode
+  user: ruby
+  password: ruby
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -63,9 +67,9 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: vitaminlab-spree_test
+# test:
+#   <<: *default
+#   database: vitaminlab_spree_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
